service-mesh-deployments/v3-gw-api-otel/otel/01-tempostack.yaml
# Namespace para los componentes de tracing distribuído
apiVersion: v1
kind: Namespace
metadata:
  name: tracing-system
